--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,11 @@
 # ==========================================
-# CREDENCIAIS QUOTEX
+# CREDENCIAIS AVALON BROKER
 # ==========================================
-# Use o email e senha da sua conta Quotex
-# O bot usa a biblioteca PyQuotex oficial
-QUOTEX_EMAIL=seu@email.com
-QUOTEX_PASSWORD=sua_senha_aqui
-QUOTEX_LANG=pt
-QUOTEX_ENVIRONMENT=demo
+# Use o email e senha da sua conta Avalon
+AVALON_EMAIL=seu@email.com
+AVALON_PASSWORD=sua_senha_aqui
+AVALON_LANG=pt
+AVALON_ENVIRONMENT=demo
 
 # ==========================================
 # CONFIGURAÇÕES DE TRADING
@@ -34,8 +33,27 @@ API_PASSWORD=
 MODE=paper
 
 # ==========================================
-# SERVIDOR WEB (opcional)
+# SERVIDOR WEB
 # ==========================================
-HOST=127.0.0.1
+HOST=0.0.0.0
 PORT=5000
 DEBUG=false
+
+# ⚠️ IMPORTANTE: Gere uma chave secreta FORTE para produção!
+# Execute: python -c "import secrets; print(secrets.token_hex(32))"
+SECRET_KEY=dev-secret-key-change-in-production
+
+# ==========================================
+# BANCO DE DADOS (PostgreSQL - Opcional)
+# ==========================================
+# Opção 1: usar URL completa
+# DATABASE_URL=postgresql://usuario:senha@host:5432/nome_db
+
+# Opção 2: usar campos separados
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_DB=robo_trade
+POSTGRES_USER=postgres
+POSTGRES_PASSWORD=troque_aqui
+# SSL: disable | prefer | require (ajuste conforme seu servidor)
+PGSSLMODE=prefer
