--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ python-dotenv>=1.0.0
 requests>=2.32.0
 flask>=3.0.0
 git+https://github.com/cleitonleonel/pyquotex.git
+psycopg2-binary>=2.9.9
+websockets>=12.0
+aiohttp>=3.9.0
+gunicorn>=21.2.0
