--- a/railway.toml
+++ b/railway.toml
@@ -1,8 +1,8 @@
 [build]
-builder = "nixpacks"
+builder = "dockerfile"
 
 [deploy]
-startCommand = "python run.py"
+startCommand = "gunicorn run:app --workers 2 --threads 4 --timeout 120 --bind 0.0.0.0:$PORT"
 healthcheckPath = "/check-auth"
 healthcheckTimeout = 100
 restartPolicyType = "on_failure"
