--- a/railway.toml
+++ b/railway.toml
@@ -2,6 +2,6 @@
 builder = "dockerfile"
 
 [deploy]
-startCommand = "gunicorn run:app --workers 2 --threads 4 --timeout 120 --bind 0.0.0.0:$PORT"
+startCommand = "gunicorn run:app --workers 2 --threads 4 --timeout 120 --bind 0.0.0.0:${PORT:-5000}"
 restartPolicyType = "on_failure"
 restartPolicyMaxRetries = 10
